# docs/swagger.yaml
@@ -1,5 +1,31 @@
 basePath: '{{.BasePath}}'
 definitions:
+  models.Film:
+    properties:
+      actor:
+        example: 演员
+        type: string
+      address:
+        example: 出品地区
+        type: string
+      createAt:
+        example: 创建时间
+        type: string
+      desc:
+        example: 描述
+        type: string
+      id:
+        type: integer
+      name:
+        example: 电影名称
+        type: string
+      updateAt:
+        example: 更新时间
+        type: string
+      year:
+        example: 年份
+        type: string
+    type: object
   models.Music:
     properties:
       createAt:
@@ -25,10 +51,137 @@ info:
   contact: {}
   description: An example of gin
   license:
-    name: MIT
+    name: MIT //localhost:8081
+  termsOfService: 运行地址：http://localhost:8081
   title: Golang Gin API
   version: "2.0"
 paths:
+  /api/v2/film/:
+    get:
+      consumes:
+      - application/json
+      description: 电影列表
+      parameters:
+      - description: name
+        in: query
+        name: name
+        type: string
+      - description: pageNum
+        in: query
+        name: pageNum
+        required: true
+        type: string
+      - description: pageSize
+        in: query
+        name: pageSize
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Film'
+            type: object
+        "400":
+          description: '{ "code": 400, "message": "请求失败" }'
+          schema:
+            type: string
+      summary: 获取电影列表
+      tags:
+      - 电影
+    post:
+      consumes:
+      - application/json
+      description: 创建电影
+      parameters:
+      - description: name
+        in: query
+        name: name
+        type: string
+      - description: year
+        in: query
+        name: year
+        type: string
+      - description: address
+        in: query
+        name: address
+        type: string
+      - description: actor
+        in: query
+        name: actor
+        type: string
+      - description: desc
+        in: query
+        name: desc
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Film'
+            type: object
+        "400":
+          description: '{ "code": 400, "message": "请求失败" }'
+          schema:
+            type: string
+      summary: 创建电影列表
+      tags:
+      - 电影
+  /api/v2/film/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 电影列表
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Film'
+            type: object
+        "400":
+          description: '{ "code": 400, "message": "id必传" }'
+          schema:
+            type: string
+      summary: 删除电影列表
+      tags:
+      - 电影
+    put:
+      consumes:
+      - application/json
+      description: 电影列表
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Film'
+            type: object
+        "400":
+          description: '{ "code": 400, "message": "id必传" }'
+          schema:
+            type: string
+      summary: 更新电影列表
+      tags:
+      - 电影
   /api/v2/music/:
     get:
       consumes:
