# main.go
@@ -12,8 +12,8 @@ import (
 // @title Golang Gin API
 // @version 2.0
 // @description An example of gin
-// @termsOfService
-// @license.name MIT
+// @termsOfService 运行地址：http://localhost:8081
+// @license.name MIT //localhost:8081
 func main() {
 	/*
 		cors.Default() 默认允许所有源跨域
@@ -27,10 +27,17 @@ func main() {
 
 	v2 := router.Group("/api/v2")
 	{
+		// 音乐接口
 		v2.GET("/music", controls.MusicList)
 		v2.POST("/music", controls.MusicCreate)
 		v2.PUT("/music/:id", controls.MusicUpdate)
 		v2.DELETE("/music/:id", controls.MusicDelete)
+
+		// 电影接口
+		v2.GET("/film", controls.FilmList)
+		v2.POST("/film", controls.FilmCreate)
+		v2.PUT("/film/:id", controls.FilmUpdate)
+		v2.DELETE("/film/:id", controls.FilmDelete)
 	}
 
 	router.Run("localhost:8081")
